--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: java
 # core streaming now requires Java 8
 jdk:
   - openjdk8
-# 08-Sep-2017, tatu: no go. For... whatever reason
-#  - oraclejdk9
+  - oraclejdk9
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
@@ -14,7 +13,6 @@ after_success: "mvn deploy --settings target/travis/settings.xml"
 branches:
   only:
     - master
-    - "2.8"
     - "2.9"
 
 env:
