--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.fasterxml.jackson</groupId>
     <!-- For 2.9.2 and beyond, new parent pom; extends jackson-bom -->
     <artifactId>jackson-base</artifactId>
-    <version>2.9.5-SNAPSHOT</version>
+    <version>2.9.5</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
