Add snapshot repo definition directly, needed for snapshot parent access

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.fasterxml.jackson</groupId>
     <!-- For 2.9.2 and beyond, new parent pom; extends jackson-bom -->
     <artifactId>jackson-base</artifactId>
-    <version>2.9.5</version>
+    <version>2.9.6-SNAPSHOT</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
@@ -45,7 +45,17 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <jdk.module.name>com.fasterxml.jackson.core</jdk.module.name>
   </properties>
 
-  <!-- parent provides junit dep, not repeated here -->
+  <!-- Alas, need to include snapshot reference since otherwise can not find
+       snapshot of parent... -->
+  <repositories>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <name>Sonatype Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases><enabled>false</enabled></releases>
+      <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 
   <build>
     <plugins>
