--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: java
 jdk:
   - openjdk8
   - oraclejdk9
+  - oraclejdk11
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
