--- a/pom.xml
+++ b/pom.xml
@@ -98,27 +98,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
       </plugin>
 
       <!--  04-Mar-2019, tatu: Add rudimentary JDK9+ module info. To build with JDK 8
-             will have to use `moduleInfoFile` which is crappy but anything else requires
-             JDK 9+. With Jackson 3.0 will upgrade.
+             will have to use `moduleInfoFile` as anything else requires JDK 9+
         -->
       <plugin>
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>add-module-infos</id>
-            <phase>package</phase>
-            <goals>
-              <goal>add-module-info</goal>
-            </goals>
-            <configuration>
-              <overwriteExistingFiles>true</overwriteExistingFiles>
-              <module>
-                <moduleInfoFile>src/moditect/module-info.java</moduleInfoFile>
-              </module>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
