--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: java
 # core streaming still builds on jdk6 and above:
 jdk:
   - openjdk6
-  - oraclejdk7
-  - oraclejdk8
+  - openjdk8
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # http://blog.xeiam.com/2013/05/configure-travis-ci-to-deploy-snapshots.html
@@ -14,8 +13,7 @@ after_success: "mvn deploy --settings target/travis/settings.xml"
 branches:
   only:
     - master
-    - "2.7"
-    - "2.6"
+    - "2.8"
 
 env:
   global:
