manual merge of pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
   <packaging>bundle</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <inceptionYear>2008</inceptionYear>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <url>https://github.com/FasterXML/jackson-core</url>
   <scm>
