--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.11.0-SNAPSHOT</version>
+    <version>2.11.0</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
