--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-language: java
 # 08-Dec-2018, tatu: While it should be possible to run core streaming on Java 6,
 #   build won't work with anything below Java 8 now
+language: java
   - openjdk8
-  - oraclejdk11
+  - openjdk11
 
 # Below this line is configuration for deploying to the Sonatype OSS repo
 #   https://knowm.org/configure-travis-ci-to-deploy-snapshots/
