fix travis wrt jdk

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # 08-Dec-2018, tatu: While it should be possible to run core streaming on Java 6,
 #   build won't work with anything below Java 8 now
 language: java
+
+jdk:
   - openjdk8
   - openjdk11
 
