--- a/pom.xml
+++ b/pom.xml
@@ -126,14 +126,19 @@ com.fasterxml.jackson.core.*;version=${project.version}
         <artifactId>replacer</artifactId>
       </plugin>
 
-      <!--  04-Mar-2019, tatu: Add rudimentary JDK9+ module info. To build with JDK 8
+      <!-- 04-Mar-2019, tatu: Add rudimentary JDK9+ module info. To build with JDK 8
              will have to use `moduleInfoFile` as anything else requires JDK 9+
         -->
       <plugin>
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
-
+      <!-- 03-Nov-2020, tatu: Add LICENSE from main level -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+      </plugin>
+      
       <plugin>
         <groupId>de.jjohannes</groupId>
         <artifactId>gradle-module-metadata-maven-plugin</artifactId>
