--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
       </plugin>
+      <!-- 03-Nov-2020, tatu: Add LICENSE from main level -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+      </plugin>
 
       <plugin>
         <groupId>de.jjohannes</groupId>
