--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ jdk:
   - openjdk8
   - oraclejdk11
 
+cache:
+  directories:
+  - $HOME/.m2
+
 # Below this line is configuration for deploying to the Sonatype OSS repo
 # https://knowm.org/configure-travis-ci-to-deploy-snapshots/
 before_install: "git clone -b travis `git config --get remote.origin.url` target/travis"
