--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ jdk:
   - openjdk8
   - openjdk11
 
+# Avoid bogus branches
+branches:
+  only:
+    - "2.12"
+
 # Below this line is configuration for deploying to the Sonatype OSS repo
 #   https://knowm.org/configure-travis-ci-to-deploy-snapshots/
 
