--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>2.12.6-SNAPSHOT</version>
+    <version>2.12.6</version>
   </parent>
 
   <groupId>com.fasterxml.jackson.core</groupId>
