add one doubleparser test case (as a start)

--- a/pom.xml
+++ b/pom.xml
@@ -121,4 +121,19 @@ com.fasterxml.jackson.core.*;version=${project.version}
     </plugins>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.8.2</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
 </project>
