--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
     - name: Build
       run: ./mvnw -V -B -ff -ntp verify
     - name: Extract Maven Version
-      run: VERSION=$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
+      run: PROJECT_VERSION=$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
     - name: Display Maven Version
-      run: echo "Maven version found to be: /$VERSION/..."
+      run: echo "Maven version found to be: $PROJECT_VERSION ..."
     - name: Deploy snapshot
       if: github.event_name != 'pull_request' && matrix.java_version == '8'
       env:
