--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,10 @@ jobs:
     - name: Build
       run: ./mvnw -V -B -ff -ntp verify
     - name: Extract Maven Version
-      run: PROJECT_VERSION=$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
+      id: projectVersion
+      run: echo ::set-output name=version::$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
     - name: Display Maven Version
-      run: echo "Maven version found to be: $PROJECT_VERSION ..."
+      run: echo "Maven version found to be: ${{ steps.projectVersion.outputs.version }}..."
     - name: Deploy snapshot
       if: github.event_name != 'pull_request' && matrix.java_version == '8'
       env:
