--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,12 +49,15 @@ jobs:
       id: projectVersion
       run: echo ::set-output name=version::$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
     - name: Display Maven Version
-      run: echo "Maven version found to be: ${{ steps.projectVersion.outputs.version }}..."
+      run: echo "Maven version: $PROJECT_VERSION ..."
+      env:
+        PROJECT_VERSION: ${{ steps.projectVersion.output.version }}
     - name: Deploy snapshot
       if: github.event_name != 'pull_request' && matrix.java_version == '8'
       env:
         CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
         CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
+        PROJECT_VERSION: ${{ steps.projectVersion.output.version }}
         # MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       run: ./mvnw -B -ff -DskipTests -ntp source:jar deploy
     - name: Generate code coverage
