--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,9 @@ jobs:
       id: projectVersion
       run: echo ::set-output name=version::$( ./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q )
     - name: Display Maven Version
-      run: echo "Maven version: $PROJECT_VERSION ..."
       env:
         PROJECT_VERSION: ${{ steps.projectVersion.output.version }}
+      run: echo "Maven version: should extract ..."
     - name: Deploy snapshot
       if: github.event_name != 'pull_request' && matrix.java_version == '8'
       env:
