--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,12 +50,14 @@ jobs:
       run: echo ::set-output name=version::$(./mvnw org.apache.maven.plugins:maven-help-plugin:3.2.0:evaluate -DforceStdout -Dexpression=project.version -q)
     - name: Is Snapshot
       if: endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
-      run: echo 'Is Snapshot: $PROJECT_VERSION ...'
+      run: |
+        echo 'Is Snapshot: $PROJECT_VERSION ...'
       env:
         PROJECT_VERSION: ${{ steps.projectVersion.output.version }}
     - name: Not Snapshot
       if: ${{ !endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT') }}
-      run: echo 'Is NOT Snapshot: $PROJECT_VERSION ...'
+      run: |
+        echo 'Is NOT Snapshot: $PROJECT_VERSION ...'
       env:
         PROJECT_VERSION: ${{ steps.projectVersion.output.version }}
     - name: Deploy snapshot
