Try again with double quotes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,13 +51,13 @@ jobs:
     - name: Is Snapshot
       if: endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT')
       run: |
-        echo 'Is Snapshot: $PROJECT_VERSION ...'
+        echo "Is Snapshot: $PROJECT_VERSION ..."
       env:
         PROJECT_VERSION: ${{ steps.projectVersion.outputs.version }}
     - name: Not Snapshot
       if: ${{ !endsWith(steps.projectVersion.outputs.version, '-SNAPSHOT') }}
       run: |
-        echo 'Is NOT Snapshot: $PROJECT_VERSION ...'
+        echo "Is NOT Snapshot: $PROJECT_VERSION ..."
       env:
         PROJECT_VERSION: ${{ steps.projectVersion.outputs.version }}
     - name: Deploy snapshot
