--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     - master
     - "3.0"
     - "2.14"
-    - "2.13"
     paths-ignore:
     - "README.md"
     - "release-notes/*"
@@ -14,7 +13,6 @@ on:
     - master
     - "3.0"
     - "2.14"
-    - "2.13"
     paths-ignore:
     - "README.md"
     - "release-notes/*"
@@ -24,8 +22,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Alas, as long as JDK6 is target, cannot run against 14+
-        java_version: ['8', '11']
+        # As of Jackson 2.14 got Java 8 baseline so can build on later JDKs too
+        java_version: ['8', '11', '17']
         os: ['ubuntu-20.04']
     env:
       JAVA_OPTS: "-XX:+TieredCompilation -XX:TieredStopAtLevel=1"
