use https for links in the pom

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -29,7 +29,7 @@
   <scm>
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
-    <url>http://github.com/FasterXML/jackson-core</url>    
+    <url>https://github.com/FasterXML/jackson-core</url>
     <tag>HEAD</tag>
   </scm>
 
