--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@ tools.jackson.core.*;version=${project.version}
 
     <!-- Bnd annotations for generating extra OSGi metadata. -->
     <version.bnd.annotation>6.3.1</version.bnd.annotation>
+
+    <!-- for Reproducible Builds -->
+    <project.build.outputTimestamp>2022-09-18T00:00:00Z</project.build.outputTimestamp>
   </properties>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
