--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <groupId>com.fasterxml.jackson.core</groupId>
   <artifactId>jackson-core</artifactId>
   <name>Jackson-core</name>
-  <version>2.14.0-rc1-SNAPSHOT</version>
+  <version>2.14.0-rc1</version>
   <packaging>bundle</packaging>
   <description>Core Jackson processing abstractions (aka Streaming API), implementation for JSON</description>
   <licenses>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-core.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-core.git</developerConnection>
     <url>https://github.com/FasterXML/jackson-core</url>
-    <tag>HEAD</tag>
+    <tag>jackson-core-2.14.0-rc1</tag>
   </scm>
 
   <properties>
@@ -50,7 +50,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <version.bnd.annotation>6.3.1</version.bnd.annotation>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2022-09-18T00:00:00Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2022-09-25T20:53:30Z</project.build.outputTimestamp>
   </properties>
 
   <!-- Alas, need to include snapshot reference since otherwise can not find
