--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,6 @@ com.fasterxml.jackson.core.*;version=${project.version}
     <packageVersion.dir>com/fasterxml/jackson/core/json</packageVersion.dir>
     <packageVersion.package>${project.groupId}.json</packageVersion.package>
 
-    <!-- Bnd annotations for generating extra OSGi metadata. -->
-    <version.bnd.annotation>6.3.1</version.bnd.annotation>
-
     <!-- for Reproducible Builds -->
     <project.build.outputTimestamp>2022-10-10T23:25:41Z</project.build.outputTimestamp>
   </properties>
@@ -147,16 +144,7 @@ com.fasterxml.jackson.core.*;version=${project.version}
   </build>
 
   <dependencies>
-    <!--  31-Jul-2022, tatu: [core#768] OSGi metadata -->
-    <dependency>
-      <groupId>biz.aQute.bnd</groupId>
-      <artifactId>biz.aQute.bnd.annotation</artifactId>
-      <version>${version.bnd.annotation}</version>
-      <optional>true</optional>
-      <scope>provided</scope>
-    </dependency>
-
-    <!--  plus test dependencies -->
+    <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
