--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,11 @@
   </scm>
 
   <properties>
-    <!-- 16-Nov-2022, tatu: [core#838] Verify Android SDK compatibility.
-         Baseline compatibility:
-         * Jackson 2.13 - 2.15 compatible with Android SDK 19 and up
-         * Jackson 3.0 compatible with Android SDK 19 and up
+    <!-- Baseline Android SDK compatibility:
+
+         * Jackson 3.0 compatible with Android SDK 26 and up
       -->
-    <version.android.sdk>19</version.android.sdk>
+    <version.android.sdk>26</version.android.sdk>
     <version.android.sdk.signature>0.5.0</version.android.sdk.signature>
     
     <osgi.export>tools.jackson.core;version=${project.version},
