--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,11 @@ com.fasterxml.jackson.core.*;version=${project.version}
   </build>
 
   <dependencies>
+    <dependency>
+      <groupId>ch.randelshofer</groupId>
+      <artifactId>fastdoubleparser</artifactId>
+      <version>0.5.0</version>
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.junit.vintage</groupId>
